--- a/CSS/hierarquia.css
+++ b/CSS/hierarquia.css
@@ -1,22 +1,10 @@
-@import url(./fontes.css);
-
+@import url(fontes.css);
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
-    background: url(../Imagens/hierarquia.jpg)  no-repeat center center/cover;
-}
-
-.predacao {
-    max-width: 1200px;
-    margin: 140px auto 50px auto; 
-    padding: 30px 40px;
     
-    div > div {
-        display: flex;
-        justify-content: center;
-    }
 }
