--- a/CSS/predacao.css
+++ b/CSS/predacao.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   line-height: 1.6;
-  background: url("../Imagens/predacao.png") no-repeat center center/cover;
+  background: url("../Imagens/geranimo-yKiLWMWquKE-unsplash.jpg") no-repeat center center/cover;
   background-attachment: fixed;
   background-size: cover;
   height: 100%;
