--- a/CSS/comunicacao.css
+++ b/CSS/comunicacao.css
@@ -1,1 +1,84 @@
-@import url(cabecalho.css);
+@import url(fontes.css);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: url("../Imagens/hierarquia.jpg") no-repeat center center/cover;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #fff;
+}
+
+.comunicacao {
+  max-width: 62.5rem;
+  margin: 8.75rem auto 3.125rem auto;
+  padding: 1.875rem 2.5rem;
+  background: rgba(0, 0, 0, 0.527);
+  border-radius: 0.75rem;
+  justify-content: space-evenly;
+}
+
+.comunicacao h1 {
+  font-family: "Italiana", serif;
+  font-weight: 100;
+  margin-bottom: 1.25rem;
+  font-size: 2rem;
+}
+
+.comunicacao p {
+  font-family: "Montserrat";
+  margin-bottom: 0.9375rem;
+  text-align: justify;
+}
+
+.comunicacao img {
+  max-width: 16rem;
+  margin: 0.625rem;
+}
+
+.direita {
+  margin-top: 2.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.direita p {
+  width: 25rem;
+}
+
+.direita div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+  .esquerda {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    max-height: 19rem;
+    margin-right: 1.6rem;
+
+    .esquerda div {
+      display: flex;
+      align-items: center;
+      text-align: center;
+    }
+  }
+
+  .esquerda p {
+    width: 18.600rem;
+  }
+
+  .soli {
+    margin-top: 1.875rem;
+    width: 46.525rem;
+    margin-left: 5.175rem;
+  }
+  
+  
