--- a/CSS/cooperacao.css
+++ b/CSS/cooperacao.css
@@ -1,1 +1,67 @@
 @import url(cabecalho.css);
+@import url(fontes.css);
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: url("../Imagens/Cooperação.jpg") no-repeat center center/cover;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #fff;
+}
+
+.cooperacao {
+  max-width: 62.5rem;
+  margin: 8.75rem auto 3.125rem auto;
+  padding: 1.875rem 2.5rem;
+  background: rgba(0, 0, 0, 0.527);
+  border-radius: 0.75rem;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.cooperacao h1 {
+  font-family: "Italiana", serif;
+  margin-top: 0.938rem;
+  margin-bottom: 0.938rem;
+  font-size: 2rem;
+}
+
+.cooperacao p {
+  font-family: "Montserrat", serif;
+  font-weight: 100;
+  margin-bottom: 0.9375rem;
+  text-align: justify;
+}
+
+.cooperacao img {
+  max-width: 180px;
+  margin: 0.625rem;
+  border-radius: 0.75rem;
+}
+
+.esquerda {
+    margin-top: 1.875rem;
+    width: 700px;
+    margin-left: 6.875rem;
+}
+
+.direita {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 30px;
+}
+
+.direita p {
+  width: 390px;
+}
+
+.soli {
+  margin-top: 1.875rem;
+  width: 700px;
+  margin-left: 6.875rem;
+}
