--- a/CSS/hierarquia.css
+++ b/CSS/hierarquia.css
@@ -1,38 +1,68 @@
 @import url(fontes.css);
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: url("../Imagens/hierarquia.jpg") no-repeat center center/cover;
-    background-color: rgba(255, 255, 255, 0.5);
-    color: #fff;
-    
+  background: url("../Imagens/hierarquia.jpg") no-repeat center center/cover;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: #fff;
 }
 
-.predacao {
-    
+.hierarquia {
+  max-width: 62.5rem;
+  margin: 8.75rem auto 3.125rem auto;
+  padding: 1.875rem 2.5rem;
+  background: rgba(0, 0, 0, 0.527);
+  border-radius: 0.75rem;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
 
-    .colmeia {
-        max-width: 1000px;
-        margin: 140px auto 50px auto; /* espaço para cabeçalho */
-        padding: 30px 40px;
-        display: flex;
+.hierarquia h1 {
+  font-family: "Italiana", serif;
+  margin-bottom: 1.25rem;
+  font-size: 2em;
+}
 
-        h1 {
-            margin-bottom: 20px;
-            font-size: 2em;
-          }
-          
-          p {
-            margin-bottom: 15px;
-            text-align: justify;
-          }
+.hierarquia p {
+  font-family: "Montserrat", serif;
+  font-weight: 100;
+  margin-bottom: 0.9375rem;
+  text-align: justify;
+}
 
-          img {
-            max-width: 250px;
-          }
-    }
+.hierarquia img {
+  max-width: 9.375rem;
+  margin: 0.625rem;
+}
+
+.direita {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.direita p {
+  width: 25rem;
+}
+
+.esquerda {
+  display: flex;
+  align-items: center;
+  margin-left: 6.25rem;
+}
+
+.esquerda p {
+  margin-left: 3.125rem;
+  width: 29.375rem;
+}
+
+.soli {
+  margin-top: 1.875rem;
+  width: 43.125rem;
+  margin-left: 6.875rem;
 }
