--- a/CSS/predacao.css
+++ b/CSS/predacao.css
@@ -1,35 +1,40 @@
+@import url(fontes.css);
 body {
-  font-family: Arial, Helvetica, sans-serif;
   color: white;
   line-height: 1.6;
   background: url("../Imagens/geranimo-yKiLWMWquKE-unsplash.jpg") no-repeat center center/cover;
   background-attachment: fixed;
   background-size: cover;
-  height: 100%;
+  height: 0vh;
   margin: 0;
   overflow-x: hidden;
 }
 
 .conteudo {
-  max-width: 1000px;
-  margin: 140px auto 50px auto; /* espaço para cabeçalho */
-  padding: 30px 40px;
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 12px;
+  max-width: 62.5rem;
+  margin: 8.75rem auto 3.125rem auto;
+  padding: 1.875rem 2.5rem;
+  background: rgba(0, 0, 0, 0.527);
+  border-radius: 0.75rem;
+
 }
 
-/* Organizando o texto em 2 colunas */
 .texto-colunas {
   column-count: 2;
-  column-gap: 40px;
+  column-gap: 2.5rem;
 }
 
 h1 {
-  margin-bottom: 20px;
+  font-family: "Italiana", serif;
+  font-weight: 100;
+  margin-bottom: 1.25rem;
   font-size: 2em;
 }
 
 p {
-  margin-bottom: 15px;
+  font-family: "Montserrat", serif;
+  font-size: 1.1em;
+  margin-bottom: 0.9375rem;
   text-align: justify;
 }
+
