--- a/CSS/recomendacoes.css
+++ b/CSS/recomendacoes.css
@@ -1,9 +1,8 @@
 @import url(cabecalho.css);
-
+@import url(fontes.css);
 body {
     margin: 0;
     padding: 0;
-    font-family: "Montserrat", sans-serif;
     color: white;
 }
 
@@ -26,13 +25,18 @@ body {
 
   h1 {
     font-size: 2rem;
+    font-family: "Italiana", serif;
+    font-weight: 100;
+    margin-bottom: 1.25rem";
   }
 
   .informacao h2 {
+    font-family: "Comfortaa";
     font-size: 1.1rem;
   }
 
   .informacao p {
+    font-family: "Montserrat";
     font-size: 0.95rem;
   }
 }
