--- a/CSS/relacoes.css
+++ b/CSS/relacoes.css
@@ -1,18 +1,19 @@
 @import url(./cabecalho.css);
+@import url(fontes.css);
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background-image: url(../Imagens/image\ 4.png);
-    background-size: 2000px;
-    background-position: -50px;
+    background-size: 125rem;
+    background-position: -3.125rem;
 }
 
-main{
+main {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,24 +21,23 @@ main{
 }
 
 .siema {
-    max-width: 1200px;
-    height: 500px;
-    padding-top: 50px;
-    padding-left: 50px;
+    max-width: 75rem;
+    height: 31.25rem;
+    padding-top: 3.125rem;
+    padding-left: 3.125rem;
 }
 
 .slider {
     display: flex;
     align-items: center;
-    margin-bottom: -175px;
+    margin-bottom: -10.9375rem;
 }
 
-.imgsiema{
+.imgsiema {
     border-radius: 100%;
 }
-
 
 .imgsiema:hover {
     transform: scale(1.10);
     transition: 0.2s;
-  }
+}
