--- a/CSS/mutualismo.css
+++ b/CSS/mutualismo.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: url("../Imagens/hierarquia.jpg") no-repeat center center/cover;
+  background: url("../Imagens/Mutualismo.jpg") no-repeat center center/cover;
   background-color: rgba(255, 255, 255, 0.5);
   color: #fff;
 }
