--- a/CSS/simbiose.css
+++ b/CSS/simbiose.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url("../Imagens/hierarquia.jpg") no-repeat center center/cover;
+  background: url("../Imagens/david-clode-HDVmdzQxAds-unsplash.jpg") no-repeat center center/cover;
   background-color: rgba(255, 255, 255, 0.5);
   color: #fff;
 }
