--- a/CSS/sobrenos.css
+++ b/CSS/sobrenos.css
@@ -18,6 +18,7 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
+    background-color: rgba(5, 5, 5, 1.0);
 }
 
 .overlay {
@@ -78,13 +79,13 @@ body {
 
 .info-block h3 {
     margin-bottom: 0.625rem;
-    color: #014f43;
+    color: #000;
     font-weight: bold;
 }
 
 .info-block a {
     display: block;
-    color: #014f43;
+    color: #000;
     text-decoration: none;
     margin-bottom: 0.3125rem;
     font-size: 0.875rem;
