--- a/CSS/style.css
+++ b/CSS/style.css
@@ -383,3 +383,24 @@
       justify-content: center;
     }
   }
+
+  .user-icon-box {
+    width: 45px;
+    height: 45px;
+    border: 2px solid #1e90ff; /* azul */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.user-icon-box:hover {
+    transform: scale(1.07);
+}
+
+.user-icon {
+    width: 28px;
+    height: 28px;
+}
