--- a/CSS/relacoes.css
+++ b/CSS/relacoes.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url(../Imagens/image\ 4.png);
+    background-image: url(../Imagens/image\ 4\ \(1\).png);
     background-size: 125rem;
     background-position: -3.125rem;
 }
