--- a/CSS/login.css
+++ b/CSS/login.css
@@ -124,8 +124,8 @@ button:hover {
 
 .create-account{
     font-family: "Comfortaa";
-    margin-top: 20px;
-    padding: 8px 35px;
+    margin: 20px;
+    gap: 20px;
     text-decoration: underline;
     color: white;
     cursor: pointer;
