--- a/CSS/criarconta.css
+++ b/CSS/criarconta.css
@@ -14,7 +14,7 @@ header {
 }
 
 .logo {
-  font-family: var(--font-family-header);
+  font-family:"Comfortaa";
   font-size: 1.5rem;
   font-weight: bold;
   letter-spacing: 0.125rem;
